--- a/content/posts/去他妈的适配.md
+++ b/content/posts/去他妈的适配.md
@@ -4,27 +4,22 @@ title: 去他妈的适配
 date: 2018-02-06
 tags: ['web']
 ---
-## 基础
 
-### 屏幕尺寸
+## 移动开发中涉及的单位
+熟记名词就能装逼如风，却不能成为一名好的开发者，在这里与大家一起先复习一遍开发中涉及到的单位，不论是为了技术梦想还是为了人生目标，都应该好好了解一下。
 
-屏幕尺寸即屏幕对角线之间的距离，单位为英寸(inch)。单位换算如下：
 
+#### 屏幕尺寸
+即屏幕对角线之间的距离，单位为英寸(inch)。单位换算如下：
 - 1 inch = 2.54 cm
 - 1 cm = 0.3937inch
 
-### 分辨率
-
+#### 分辨率
 分辨率大致分为两种：
-
 1. 屏幕分辨率，例如屏幕分辨率为1920 x 1080，代表着设备屏幕水平方向有1024个像素点，垂直方向有1080个像素点，显示屏固定的情况下，分辨率越高画面越精细。
 2. 图像分辨率，通常情况下，图像的分辨率越高，所包含的像素就越多，图像就越清晰，印刷的质量也就越好。同时，它也会增加文件占用的存储空间。
 
-
----
-
-
-## 像素
+#### 像素
 
 像素(pixel)是组成图像的最小显示单位，它是一个抽象的单位，而不是具体的长度，在Web开发中通常将像素分为两类：
 
@@ -35,13 +30,12 @@ tags: ['web']
 
 
 
-### 设备像素比
+#### 设备像素比
 
 设备像素比缩写为DPR(Device Pixel Ratio)或者DPPX(Dots Per Pixel)，一般用于表示一个CSS像素等于几个物理像素：`DPR=物理像素/逻辑像素`。当dpr为2时，1个CSS像素由4个物理像素组成，可通过`window.devicePixelRatio`获取当前设备的dpr。
 
 
-
-### 像素密度
+#### 像素密度
 
 像素密度也叫做屏幕密度，缩写为DPI(dots Per Inch)或PPI(Pixels Per Inch)。以iphone X举例，设备的参数如下：
 
@@ -58,11 +52,7 @@ tricks：
 - 根据实验，普通人眼在一般阅读距离的极限就是300~400DPI，所以说目前的高清屏的DPI也在300左右。
 - 普通的非彩色喷墨式打印机通常设定在300dpi，根据公式：`像素=英寸 x dpi`，可以通过调整图像像素大小，获取所需要的实际尺寸大小。
 
-
-
-### 寸照究竟有多少像素？
-
-通过搜索，`1寸=2.5cm x 3.5cm=413 x 295`，聪明的你肯定不需要过多的说明，看以下换算公式：
+以寸照为例，通过搜索，`1寸=2.5cm x 3.5cm=413 x 295`，聪明的你肯定不需要过多的说明，看以下换算公式：
 ![](http://7xp5r4.com1.z0.glb.clouddn.com/18-2-6/99937072.jpg)
 
 ---
@@ -70,8 +60,6 @@ tricks：
 ## viewport(视口)
 
 viewport概念通常存在于移动端，因为pc端的视口大小与窗口相等，而在移动设备的浏览器中，一般视口的默认大小会比设备逻辑的独立像素要大，并可拖过手动缩放来浏览网页，这个窗口就称之为viewport，普通设备浏览器的默认viewport通常为980px或1024px，随之的副作用就是设备的横向滚动条。
-
-
 
 ### 布局视口
 
