--- a/content/posts/Algorithm/二叉搜索树.md
+++ b/content/posts/Algorithm/二叉搜索树.md
@@ -1,7 +1,7 @@
 ---
-title: 二叉搜索树
+title: 二叉查找树
 date: 2018-09-04
-tags: ['Logic']
+tags: ['Algorithm']
 ---
 
 ![](http://7xp5r4.com1.z0.glb.clouddn.com/18-9-8/94530606.jpg)
@@ -40,7 +40,7 @@ tags: ['Logic']
 
 ## 二叉查找树
 
-二叉查找树（BinarySearchTree，BST）是一种特殊的二叉树，它也成为二叉搜索树、有序二叉树或排序二叉树，具有以下特性：
+二叉查找树（BinarySearchTree，BST）是一种特殊的二叉树，它也被叫做二叉搜索树、有序二叉树或排序二叉树，具有以下特性：
 
 ![](http://7xp5r4.com1.z0.glb.clouddn.com/18-9-8/51687389.jpg)
 
@@ -49,7 +49,7 @@ tags: ['Logic']
 3. 任意节点的左、右子树也分别为二叉查找树；
 4. 没有键值相等的节点。
 
-
+**BST 算法查找时间依赖于树的拓扑结构。最佳情况是 O(log­2n)，而最坏情况是 O(n)**。
 
 ## 实现一个二叉查找树
 
@@ -325,3 +325,60 @@ BinarySearchTree.breadthFirstTraverseNode = function(node, cb) {
   }
 };
 ```
+
+## 可视化
+
+由于整个程序是一个抽象的分层结构，因此可视化是十分必要的一项工作。在canvas与svg之前没有过多犹豫，果断选择后者，因为这类图表注重的是节点增删改查，而且本身也不会有什么动画。
+
+经过一番折腾，最终选用[d3-hierarchy](https://github.com/d3/d3-hierarchy)这个库，它用于分层数据的可视化，创建节点连接图、领接矩阵图等。
+
+首先需要使用Hierarchy API创建分层数据结构，通过上几个章节我们构造出的二叉树的数据结构大致为：
+```
+{
+  value: 1,
+  left: {
+    value: 2,
+    left: {
+      value: 4,
+      left: null,
+      right: null
+    },
+    right: null
+  },
+  right: {
+    value:3,
+    left: null,
+    right: null
+  }
+}
+```
+而Hierarchy的结构为：
+```
+{
+  "name": "Eve",
+  "children": [
+    {
+      "name": "Cain"
+    },
+    {
+      "name": "Seth",
+      "children": [
+        {
+          "name": "Enos"
+        },
+        {
+          "name": "Noam"
+        }
+      ]
+    },
+  ]
+}
+```
+因此我们需要将二叉树的结构转化为上述结构才行，好在`d3.hierarchy(data[, children]) `的第二个参数就是子元素构造器，它允许函数返回空或是子元素数组。而二叉树每个节点有左子树和右子树之分，而Hierarchy的父元素可以有任意个子元素，因此我们在转化时，若二叉树某个节点只有右子树，当它传入chilren构造器时，将它返回`[{}, d.right]`，此时数组的第一个元素代表左子树，第二个代表右子树，空对象仅仅是为了占位，在可视化的时候我们将其排除在外即可。
+
+最终使用`d3.tree()`将转化好的分层结构进行布局即可，我们就拥有了一个具有坐标点的二叉树。
+
+值得一提的是，最开始我使用的d3进行控制的dom，语法十分繁琐，也不是很通用，而后采用了React进行dom的控制，d3只负责数据与逻辑层，它们简直是绝配，所以现阶段若再遇到这种可视化的工作，我一定会选用React与D3.js。
+
+完整的二叉树实现代码与可视化程序在[这里](https://github.com/vv13/react-d3-bst)可以找到。
+
