feat: docs updates

--- a/content/posts/冒泡、选择与插入排序.md
+++ b/content/posts/冒泡、选择与插入排序.md
@@ -2,7 +2,7 @@
 layout: post
 title: 几个简单的排序-js描述
 date: 2016-12-26
-tags: ['js']
+tags: ['JavaScript']
 ---
 排序算法的精髓就在于：不用会忘，看一遍就能懂。 所以记录一下还是很有必要的。
 
