--- a/content/posts/Algorithm/求质数的几种方法.md
+++ b/content/posts/Algorithm/求质数的几种方法.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: python求质数的几种方法
+title: 求质数的几种方法
 date: 2016-12-26
-tags: ['python']
+tags: ['Algorithm']
 ---
 
 今天偶然在博客上上看到有人提[求质素的几种境界](http://blog.csdn.net/program_think/article/details/7032600/),在此用python进行实现代码,并进行简单的说明.
