--- a/content/posts/Weapp/微信小程序转发之页面缩略图生成.md
+++ b/content/posts/Weapp/微信小程序转发之页面缩略图生成.md
@@ -25,10 +25,10 @@ onShareAppMessage函数要求返回一个对象，内容为：
 
 ## 默认截图存在的问题
 
-采用默认截图只能满足极少部分的场景，让我们考虑以下情况：
+采用默认截图通常用于对分享图片要求不高的场景，或者恰好满足截图需求，你可能遇到过以下场景：
 
-- 若转发路径不是当前页面，那么默认截图还有存在的必要吗？
-- 屏幕高度超过100%，当滚动到屏幕中部进行分享页面，则只会截取屏幕中部的截图，而不是预想的从页面顶部开始截图
+- 需要转发出去的页面不是当前触发分享的页面
+- 需要从页面顶部开始截图，可当滚动到页面中部时，只能从当前视窗开始截图
 - 当我们想要隐藏页面的部分元素，不希望分享截图携带某些元素，怎么处理呢？
 
 由以上可知，大部分情况，转发页面的功能都应该使用自定义图片的，并且自定义图片应该单独按照的设计，独立于页面，建议尺寸为：`750rpx x 600rpx`。若你需要分享的页面的自定义图片可以是固定的某张图片，那恭喜你已经可以不用往下看了，但对于大多数应用来说，分享截图往往携带动态的数据等，此时该如何解决呢？
