feat: add Koa源码分析

--- a/blog/src/posts/Algorithm/冒泡、选择与插入排序.md
+++ b/blog/src/posts/Algorithm/冒泡、选择与插入排序.md
@@ -1,11 +1,9 @@
 ---
 layout: post
-title: 几个简单的排序-js描述
+title: 冒泡、选择与插入排序
 date: 2016-12-26
 tags: ['Algorithm']
 ---
-排序算法的精髓就在于：不用会忘，看一遍就能懂。 所以记录一下还是很有必要的。
-
 
 ## 冒泡
 冒泡排序（Bubble Sort），是一种较简单的排序算法，较稳定，用途广，时间复杂度为O(n^2)。
@@ -29,14 +27,10 @@ function sort(arrs) {
     }
   }
 }
-
-输入：3,6,9,4,2
-输出：2,3,4,6,9
-耗时：18ms
 ```
 
 ## 选择排序
-选择排序也很简单，大家懂冒泡就理解，它是冒泡排序的一种改进方法，他们都是每次循环找出一个最大或最小的数，区别在于冒泡排序会进行很多次交换数据，而选择排序用一个变量来暂存值，每趟循环只进行一次交换。
+选择排序是冒泡排序的一种改进方法，他们都是每次循环找出一个最大或最小的数，区别在于冒泡排序会进行很多次交换数据，而选择排序用一个变量来暂存值，每趟循环只进行一次交换。
 
 #### 原理
 ![选择排序](/static/imgs/冒泡、选择与插入排序-2.jpg)
@@ -60,13 +54,9 @@ function sort(arrs) {
     }
   }
 }
-
-输入：3,6,9,4,2
-输出：9,6,4,3,2
-耗时：18ms
 ```
 
-## 插入
+## 插入排序
 插入排序即将一个数插入到一个已经有序的数字序列中，是一个稳定的排序方法，平均情况稍微比选择排序快。
 
 #### 原理
@@ -78,24 +68,21 @@ function sort(arrs) {
 #### 代码
 ```
 function sort(arrs) {
-  const len = arrs.length;
-  for (let i = 1; i < len; i++) {
-    let j = i - 1;
-    const index = arrs[i];
-    while (j >= 0 && arrs[j] > index) {
-      arrs[j + 1] = arrs[j--];
+  for (let i = 1; i < arrs.length; i += 1) {
+    let j = i;
+    const newCard = arrs[j];
+    while(j > 0 && arrs[j - 1] > newCard) {
+      arrs[j] = arrs[j - 1];
+      j -= 1;
     }
-    arrs[j + 1] = index;
+    arrs[j] = newCard
   }
+  return arrs;
 }
-
-输入：3,6,9,4,2
-输出：2,3,4,6,9
-耗时：18ms
 ```
 
-## 快排
-快速排序是在实际中最常用的一种排序算法，速度快，效率高。就像名字一样，快速排序是最优秀的一种排序算法。它采用了分治法的思想，整个排序过程递归进行。
+## 快速排序
+快速排序是在实际中最常用的一种排序算法，速度快，效率高。它采用了分治法的思想，整个排序过程递归进行。
 
 #### 原理
 1. 选取数组中最左边的数作为基准。
@@ -104,28 +91,24 @@ function sort(arrs) {
 
 #### 代码
 ```
-function sort(arrs, left, right) {
-  if (left > right) return;
-  const len = arrs.length;
-  const key = arrs[left];
+function quicksort(arrs, left, right) {
+  if (left > right || left < 0 || right < 0) return;
+  const middle = arrs[left];
   let low = left;
   let high = right;
   while (low < high) {
-    while (low < high && arrs[high] > key) {
+    while (low < high && arrs[high] >= middle) {
       high--;
     }
     arrs[low] = arrs[high];
-    while (low < high && arrs[low] < key) {
+    while (low < high && arrs[low] <= middle) {
       low++;
     }
     arrs[high] = arrs[low];
   }
-  arrs[low] = key;
+  arrs[low] = middle;
   sort(arrs, left, low - 1);
   sort(arrs, low + 1, right);
+  return arrs
 }
-
-输入：[3,6,9,4,2],0,4
-输出：[2,3,4,6,9],0,4
-耗时：15ms
 ```
