--- a/md/笔记/20200802_写给自己的一份.md
+++ b/md/笔记/20200802_写给自己的一份.md
@@ -20,6 +20,16 @@ tags: ['笔记']
 
  在国内网路环境会收到一些限制，请优先安装相关网络代理工具。
 
+### 备份代码仓库
+
+通常在备份代码仓库之前，尤其是前端工程师，一定需要先将 node_modules 删除了再备份，否则会导致碎片化文件过多，十分耗时，因此我写了一个小工具，首先进入到需要清理 node_modules 文件的根目录，然后执行：
+
+```
+$ npx cleanup-node-modules
+```
+
+命令会递归的清理掉所有根目录之下的 node_modules 文件夹。
+
 ## 应用软件
 
 ### 基本应用
