write generate post py script

--- a/md/笔记/20200802_写给自己的一份.md
+++ b/md/笔记/20200802_写给自己的一份.md
@@ -45,6 +45,7 @@ $ npx cleanup-node-modules
 - [Robo 3T](https://robomongo.org/)，最好用的 Mongo 终端
 - [XCode](https://developer.apple.com/xcode/)，iOS 必备开发工具
 - [AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager)，开源的 Redis 客户端
+- [MySQL WOrkbench](https://dev.mysql.com/downloads/workbench/)，MySQL 客户端
 
 ### 影音
 
