--- a/md/笔记/20200802_写给自己的一份系统重装指南.md
+++ b/md/笔记/20200802_写给自己的一份系统重装指南.md
@@ -32,6 +32,9 @@ $ npx cleanup-node-modules
 
 ## 应用软件
 
+### 效率
+- [XMind](https://www.xmind.net/), 思维导图绘制工具
+
 ### 基本应用
 
 - [Chrome](https://www.google.com/intl/zh-CN/chrome/)，通过 Google 账号登陆，所有插件、书签瞬间回来，感觉重装软件已经完成了一半
@@ -45,7 +48,8 @@ $ npx cleanup-node-modules
 - [Robo 3T](https://robomongo.org/)，最好用的 Mongo 终端
 - [XCode](https://developer.apple.com/xcode/)，iOS 必备开发工具
 - [AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager)，开源的 Redis 客户端
-- [MySQL WOrkbench](https://dev.mysql.com/downloads/workbench/)，MySQL 客户端
+- [MySQL Workbench](https://dev.mysql.com/downloads/workbench/)，MySQL 客户端
+- [IntelliJ IDEA](https://www.jetbrains.com/idea/)，开源免费最强大的 IDE，虽然平时不写 Java，但会用它来进行 Code Review。
 
 ### 影音
 
@@ -59,6 +63,7 @@ $ npx cleanup-node-modules
 - [欧陆词典](https://www.eudic.net/v4/en/app/download)，即时翻译英文词典工具
 - [Typora](https://typora.io/)，Markdown 编辑器，我仅用于改写单个的 md 文档
 - [Postman](https://www.postman.com/downloads/)，接口请求管理，最近正在往 [Postwoman](https://postwoman.io/) 迁移
+- [AppCleaner](https://freemacsoft.net/appcleaner/)，清理软件残余文件, 更干净地卸载应用
 
 ### 增强
 
