update footer and some posts

--- a/md/Tricks/20161211_Git实用命令技巧.md
+++ b/md/Tricks/20161211_Git实用命令技巧.md
@@ -113,3 +113,10 @@ $ git push upstream
 对于大型项目来讲，我们往往光拉取代码就会耗费很多时间，这是因为历史提交记录占了很大的储存空间，这时可以用 `--depth=1`，代表只保留最近一个提交信息，来看看拉取`React`仓库使用前后的对比：
 - `git clone https://github.com/facebook/react.git react`，占用 180M。
 - `git clone https://github.com/facebook/react.git react --depth=1`，占用 22M。
+
+## 远程分支覆盖本地分支
+假若远程拉取了新的分支线，想将本地的分支同步为远程分支，可以执行以下操作：
+```
+git fetch --all
+git reset --hard origin/master
+```
