--- a/md/笔记/20200802_写给自己的一份系统重装指南.md
+++ b/md/笔记/20200802_写给自己的一份系统重装指南.md
@@ -31,6 +31,12 @@ $ npx cleanup-node-modules
 命令会递归的清理掉所有根目录之下的 node_modules 文件夹。
 
 ## 应用软件
+### 数据库客户端
+- [Robo 3T](https://robomongo.org/)，最好用的 Mongo 终端
+- [AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager)，开源的 Redis 客户端
+- [MySQL Workbench](https://dev.mysql.com/downloads/workbench/)，MySQL 客户端
+- [DB Browser for SQLite](https://sqlitebrowser.org/)，用于浏览本地 SQLite 数据文件的客户端，能够较为方便地进行数据浏览
+
 
 ### 效率
 - [XMind](https://www.xmind.net/), 思维导图绘制工具
@@ -45,10 +51,7 @@ $ npx cleanup-node-modules
 
 - [VSCode](https://code.visualstudio.com/)，前端最好的编辑器
 - [微信开发者工具](https://developers.weixin.qq.com/miniprogram/dev/devtools/download.html)，开发小程序、调试微信 H5 必备工具
-- [Robo 3T](https://robomongo.org/)，最好用的 Mongo 终端
 - [XCode](https://developer.apple.com/xcode/)，iOS 必备开发工具
-- [AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager)，开源的 Redis 客户端
-- [MySQL Workbench](https://dev.mysql.com/downloads/workbench/)，MySQL 客户端
 - [IntelliJ IDEA](https://www.jetbrains.com/idea/)，开源免费最强大的 IDE，虽然平时不写 Java，但会用它来进行 Code Review。
 
 ### 影音
@@ -70,6 +73,7 @@ $ npx cleanup-node-modules
 - [Mos](https://github.com/Caldis/Mos)，开源的鼠标平滑滚动工具
 - [Magnet](https://apps.apple.com/cn/app/magnet/id441258766?mt=12)，快捷的应用窗口分割工具，（收费软件）
 - [Clipy](https://github.com/Clipy/Clipy)，剪贴板扩展工具，可查看与粘贴剪贴历史
+- [RDM](https://github.com/avibrazil/RDM)，轻松更改分辨率
 
 ## 系统软件
 
