--- a/md/Tricks/20161211_Git实用命令技巧.md
+++ b/md/Tricks/20161211_Git实用命令技巧.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Git实用命令技巧" 
 date: '2016-12-11'
+update_date: '2021-02-22'
 tags: ['tricks']
 ---
 
@@ -120,3 +121,19 @@ $ git push upstream
 git fetch --all
 git reset --hard origin/master
 ```
+
+## Remote 相关
+- 修改 Remote 地址：`git remote set-url origin [ORIGIN_URL]`
+- 添加 Remote 地址：`git remote add [ORIGIN_NAME] [ORIGIN_URL]`
+- 删除 Remote 地址：`git remote remove [ORIGIN_NAME]`
+
+## 修改提交 Author
+在提交代码之前，我们需要确认一下当前的提交作者信息，确保是使用的正确的名称与邮箱：
+```
+git config user.name 
+git config user.email
+git config --global user.name // 加上 --global 默认查看全局默认值
+git config --global user.email
+```
+
+git config 命令首先会寻找当前文件夹下的`.git/config`，若不存在则取`~/.gitconfig`中的值作为默认值，若需要进行修改则直接在命令后加上相应值。
