--- a/md/笔记/20200802_写给自己的一份系统重装指南.md
+++ b/md/笔记/20200802_写给自己的一份系统重装指南.md
@@ -33,6 +33,7 @@ $ npx cleanup-node-modules
 ## 应用软件
 ### 数据库客户端
 - [Robo 3T](https://robomongo.org/)，最好用的 Mongo 终端
+- [DBeaver](https://dbeaver.io/)，开源且支持各种 SQL 数据库的连接
 - [AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager)，开源的 Redis 客户端
 - [MySQL Workbench](https://dev.mysql.com/downloads/workbench/)，MySQL 客户端
 - [DB Browser for SQLite](https://sqlitebrowser.org/)，用于浏览本地 SQLite 数据文件的客户端，能够较为方便地进行数据浏览
@@ -117,6 +118,14 @@ $ defaults write com.microsoft.VSCode ApplePressAndHoldEnabled -bool false      
 $ defaults write com.microsoft.VSCodeInsiders ApplePressAndHoldEnabled -bool false # For VS Code Insider
 $ defaults write com.visualstudio.code.oss ApplePressAndHoldEnabled -bool false    # For VS Codium
 $ defaults delete -g ApplePressAndHoldEnabled
+```
+
+## brew 相关服务
+### mysql-client
+由于我喜欢使用 docker 来管理本地的 mysql，所以单独安装了 mysql-client，在很多场景中它是必不可少的。
+```
+brew install mysql-client
+echo 'export PATH="/usr/local/opt/mysql-client/bin:$PATH"' >> ~/.zshrc
 ```
 
 然后打开键盘偏好设置，修改按键重复与延时的时间，详情参与[此文档](https://marketplace.visualstudio.com/items?itemName=vscodevim.vim)。
