--- a/md/笔记/20200802_写给自己的一份系统重装指南.md
+++ b/md/笔记/20200802_写给自己的一份系统重装指南.md
@@ -2,6 +2,7 @@
 layout: 'post'
 title: '写给自己的一份系统重装指南'
 date: '2020-08-02'
+update_date: '2021-03-16'
 tags: ['笔记']
 ---
 ## 前言
@@ -33,6 +34,7 @@ $ npx cleanup-node-modules
 ## 应用软件
 ### 数据库客户端
 - [Robo 3T](https://robomongo.org/)，最好用的 Mongo 终端
+- [sequelpro](https://sequelpro.com/)，体验比较好的一款开源 SQL 客户端，正式版已经停止更新了，且经常会崩溃，推荐 [Test Build](https://sequelpro.com/test-builds) 版本
 - [DBeaver](https://dbeaver.io/)，开源且支持各种 SQL 数据库的连接
 - [AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager)，开源的 Redis 客户端
 - [MySQL Workbench](https://dev.mysql.com/downloads/workbench/)，MySQL 客户端
