--- a/md/Web/20210910_一份来自Web开发者的Mac软件推荐清单.md
+++ b/md/Web/20210910_一份来自Web开发者的Mac软件推荐清单.md
@@ -2,8 +2,7 @@
 layout: 'post'
 title: '一份来自 Web 开发者的 Mac 软件推荐清单'
 date: '2021-09-10'
-update_date: '2021-03-16'
-tags: ['笔记']
+tags: ['Web']
 ---
 > 工欲善其事，必先利其器。
 
