--- a/md/Web/20210910_一份来自Web开发者的Mac软件推荐清单.md
+++ b/md/Web/20210910_一份来自Web开发者的Mac软件推荐清单.md
@@ -2,6 +2,7 @@
 layout: 'post'
 title: '一份来自 Web 开发者的 Mac 软件推荐清单'
 date: '2021-09-10'
+update_date: '2022-02-12'
 tags: ['Web']
 ---
 > 工欲善其事，必先利其器。
@@ -15,64 +16,62 @@ tags: ['Web']
 
 以下为一些我在 macOS 环境下比较常用的软件推荐。
 
-### 常用软件推荐
-必备软件：
-- [iTerm2](https://www.iterm2.com/)，终端窗口软件，在 Linux 系统中最常用的是 TMUX，但对于 iOS 系统来讲，iTerm2 足以。
+## 常用软件推荐
+### 必备软件：
 - [brew](https://brew.sh/)，Mac 下的包管理安装工具。
-- [COCOAPODS](https://cocoapods.org/)，iOS 依赖管理器，如果你有开发或调试 Swift 应用的需求，可以首要考虑安装。
 - [Docker Desktop for Mac](https://hub.docker.com/editions/community/docker-ce-desktop-mac/)，Docker 客户端。
-- [XCode](https://developer.apple.com/xcode/)，作为一名 macOS 平台的 Web 开发者，XCode 是你迟早会接触到的开发者工具。
 
-笔记软件：
+### 笔记软件：
 - [Typora](https://typora.io/)，Markdown 编辑器，我愿意称其为本地编写 Markdown 最顺畅的工具。
 - [Notion](https://www.notion.so/desktop)，我现在已经使用它来管理绝大多数知识文档。
 - [XMind](https://www.xmind.net/), 思维导图绘制工具，可以无限期试用，虽然次类型工具特别多，但我还是更推荐使用原版。
+- [语雀桌面客户端](https://www.yuque.com/install/desktop)，我愿将它作为知识库管理的首选。
 
-数据库客户端：
+### 数据库客户端：
 - [Robo 3T](https://robomongo.org/)，最常用的 Mongo 终端。
 - [Sequel Ace](https://sequel-ace.com/)，Sequel Pro 的长期维护版本，一款十分好用的开源 SQL 工具，支持常见 SQL 数据库。
 - [AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager)，开源的 Redis 客户端，快速、稳定。
 - [DB Browser for SQLite](https://sqlitebrowser.org/)，用于浏览本地 SQLite 数据文件的客户端，能够较为方便地进行数据浏览。
 
-开发工具：
+### 编辑器/IDE
 - [VSCode](https://code.visualstudio.com/)，如果你喜欢用编辑器，那目前这是宇宙最好的 Editor。
-- [微信开发者工具](https://developers.weixin.qq.com/miniprogram/dev/devtools/download.html)，开发小程序、调试微信 H5 必备工具
 - [IntelliJ IDEA](https://www.jetbrains.com/idea/)，开源免费最强大的 IDE，即使不写 Java，但用它来进行 Code Review 也很不错。
 
-影音：
+### 影音：
 - [IINA](https://iina.io/)，支持格式多、简洁流畅的开源视频播放器
 - [uTorrent](https://www.utorrent.com/intl/zh/)，种子下载器
 
-工具：
+### 工具：
 - [Android File Transfer](https://www.android.com/filetransfer/)，Android 系统文件传输工具
 - [Bob](https://github.com/ripperhe/Bob)，开源免费的翻译工具，支持截图翻译、。
 - [Postman](https://www.postman.com/downloads/)，本地接口请求管理，虽然类似的工具很多，但 Postman 还是功能最全，也十分易用的工具。
 - [AppCleaner](https://freemacsoft.net/appcleaner/)，清理软件残余文件, 更干净地卸载应用。
 
-增强：
+### 增强：
 - [Mos](https://github.com/Caldis/Mos)，开源的鼠标平滑滚动工具。
 - [Magnet](https://apps.apple.com/cn/app/magnet/id441258766?mt=12)，快捷的桌面应用窗口分割工具。(收费)
 - [Clipy](https://github.com/Clipy/Clipy)，开源免费，剪贴板扩展工具，用于同时复制多段信息，或查看剪贴历史。
 - [RDM](https://github.com/avibrazil/RDM)，轻松更改屏幕分辨率。
 
-代理：
+### 代理：
 - [V2rayU](https://github.com/yanue/V2rayU/releases)，支持vmess,shadowsocks,socks5等服务协议,支持订阅, 支持二维码,剪贴板导入,手动配置,二维码分享等。
 - [Proxifier](https://www.proxifier.com/)，可以使用 sock5 进行全局代理。(收费)
 - [Charles](https://www.charlesproxy.com/)，应用开发的抓包与调试工具。(收费)
 
-环境管理：
-- [nvm](https://github.com/nvm-sh/nvm)，node 版本管理
-- [yarn](https://classic.yarnpkg.com/en/docs/install/#mac-stable)，推荐使用 brew 安装，切 node 版本时不会变
-
-远程连接：
+### 终端
+- [iTerm2](https://www.iterm2.com/)，终端窗口软件，在 Linux 系统中最常用的是 TMUX，但对于 iOS 系统来讲，iTerm2 足以。
 - [mosh](https://mosh.org/)，增强 SSH 连接的稳定性，十分好用的一款终端连接客户端
-
-系统工具：
-- [z](https://github.com/rupa/z.git)，快速跳转到常用目录
-
-zsh：
 - [Oh My ZSH](https://ohmyz.sh/#install)，最好用的 Shell 工具
 - [zsh-syntax-highlighting](https://github.com/zsh-users/zsh-syntax-highlighting/blob/master/INSTALL.md)，zsh 插件 - 终端主题颜色
 - [zsh-autosuggestions](https://github.com/zsh-users/zsh-autosuggestions/blob/master/INSTALL.md)，zsh 插件 - 自动提示补全
 - [hstr](https://github.com/dvorka/hstr)，增强搜索命令行历史
+- [z](https://github.com/rupa/z.git)，快速跳转到常用目录
 
+### 移动开发
+- [COCOAPODS](https://cocoapods.org/)，iOS 依赖管理器，如果你有开发或调试 Swift 应用的需求，可以首要考虑安装。
+- [XCode](https://developer.apple.com/xcode/)，作为一名 macOS 平台的 Web 开发者，XCode 是你迟早会接触到的开发者工具。
+- [微信开发者工具](https://developers.weixin.qq.com/miniprogram/dev/devtools/download.html)，开发小程序、调试微信 H5 必备工具
+
+### Node.js
+- [nvm](https://github.com/nvm-sh/nvm)，node 版本管理
+- [yarn](https://classic.yarnpkg.com/en/docs/install/#mac-stable)，推荐使用 brew 安装，切 node 版本时不会变
